# helicopter

./: .env.example  .gitignore  .gitmodules  README.md  WEB_HARNESS_DEPLOY.md  pyproject.toml
.github/: CODEOWNERS
configs/: example.toml  (+17 more)
src/eval/lighteval/: pyproject.toml
src/eval/lighteval/src/helicopter_lighteval/: __init__.py  evaluation.py  scoreboard.py  vllm_rwkv.py
src/eval/lighteval/src/helicopter_lighteval/datasets/: __init__.py  coding.py  instruction_following.py  knowledge.py  math.py
src/eval/lighteval/src/lighteval_runner/: __init__.py  application.py  config.py  context.py  contracts.py  execution.py  framework.py  generation.py  registry.py  sample_pipeline.py  task_runtime.py
src/eval/lighteval/src/lighteval_runner/data_sources/: __init__.py  acquisition.py  resources.py
src/eval/lighteval/src/lighteval_runner/harnesses/: __init__.py  coding.py  linux_sandbox.py
src/eval/lighteval/src/lighteval_runner/provider/: __init__.py  attestation.py  endpoint.py
src/eval/lighteval/src/lighteval_runner/results/: __init__.py  acceptance.py  artifacts.py  performance.py  records.py  scoreboard.py
src/eval/lighteval/src/lighteval_runner/tasks/: __init__.py  coding.py  function_calling.py  math.py
src/eval/lighteval/tests/: test_api_smoke.py  test_application.py  test_artifacts.py  test_config.py  test_context_provider_registry.py  test_data_sources.py  test_endpoint.py  test_evaluation.py  test_evaluation_run.py  test_execution.py  test_framework_parity.py  test_generation.py  test_math.py  test_math_repair.py  test_performance.py  test_remote_acceptance_script.py  test_scoreboard.py  test_scoreboard_client.py  test_task_families.py  test_vllm_rwkv.py
src/eval/lighteval/tests/test_data/: lighteval_parity_v1.json
src/scoreboard-server/: .env.example  openapi.json  pyproject.toml
src/scoreboard-server/scoreboard_server/: __init__.py  api_v1.py  application.py  auth.py  contracts.py  errors.py  run_application.py  schema_application.py  settings.py
src/scoreboard-server/scoreboard_server/adapters/: __init__.py  screenshot.py
src/scoreboard-server/scoreboard_server/cores/: __init__.py  charts.py  identity.py  leaderboard.py  normalize.py
src/scoreboard-server/scoreboard_server/db/: __init__.py  connection.py  evaluation_publications.py  lease.py  migrations.py  repository.py  resume.py  run_commands.py  run_queries.py  schema.py  settings.py
src/scoreboard-server/scoreboard_server/db/models/: __init__.py  benchmark.py  benchmark_catalog.py  checker.py  completion.py  eval_record.py  evaluation_publication.py  scheduler_lease.py  score.py  score_model.py  task.py
src/scoreboard-server/scoreboard_server/dtos/: __init__.py
src/scoreboard-server/scoreboard_server/dtos/api/: __init__.py  capture_page.py  eval_context.py  eval_records.py  evaluation_publications.py  health.py  leaderboard.py  meta.py  refresh.py
src/scoreboard-server/scoreboard_server/dtos/api/admin/: __init__.py  backpressure.py  health.py
src/scoreboard-server/scoreboard_server/dtos/api/score_history/: __init__.py  detail.py  index.py  options.py
src/scoreboard-server/scoreboard_server/routes/api/: __init__.py  capture_page.py  eval_context.py  eval_records.py  evaluation_publications.py  health.py  leaderboard.py  meta.py  refresh.py
src/scoreboard-server/scoreboard_server/routes/api/admin/: __init__.py  backpressure.py  health.py
src/scoreboard-server/scoreboard_server/routes/api/score_history/: __init__.py  detail.py  index.py  options.py
src/scoreboard-server/scoreboard_server/services/: __init__.py
src/scoreboard-server/scoreboard_server/services/api/: __init__.py  capture_page.py  eval_context.py  eval_records.py  evaluation_publications.py  health.py  leaderboard.py  meta.py  refresh.py
src/scoreboard-server/scoreboard_server/services/api/admin/: __init__.py  backpressure.py  health.py
src/scoreboard-server/scoreboard_server/services/api/score_history/: __init__.py  detail.py  index.py  options.py
src/scoreboard-server/scripts/: export_openapi.py  seed_smoke.py  test_postgres.sh
src/scoreboard-server/tests/: test_api_v1.py  test_database_contract.py  test_evaluation_publications.py  test_scoreboard_api.py  test_scoreboard_layout.py
src/train/any2rwkv/: README.md  pyproject.toml
src/train/any2rwkv/any2rwkv/: __init__.py  artifacts.py  calibration.py  checkpoint.py  cli.py  configuration_any2rwkv.py  contract.py  data.py  distill.py  distill_runner.py  errors.py  evaluate.py  evaluator_runner.py  export.py  external_scores.py  fixture.py  hybrid.py  kernel.py  layer_store.py  mapping.py  migration.py  migration_init.py  mixer.py  mixer_store.py  modeling_any2rwkv.py  nvfp4.py  nvfp4_acceptance.py  oracle.py  p0_runner.py  preflight.py  quantize.py  recurrent.py  roundtrip.py  source.py  streamed_distill_runner.py  streamed_teacher.py  streaming_training.py  target.py  teacher.py  training.py
src/train/any2rwkv/docs/: cross-architecture-distillation-research.md
src/train/any2rwkv/manifests/: data-splits.json  quality-suite.json  qwen35-2b-distill-plan.json  qwen35-2b-proxy.json  qwen35-2b-real-data-pilot-plan.json  qwen35-2b-smoke-plan.json  qwen35-397b-distill-plan.json  qwen35-397b-scale.json
src/train/any2rwkv/scripts/: build_calibration_manifest.py  build_evaluation_manifest.py  build_paired_scores.py  build_quality_command_plan.py  fetch_fineweb_edu.py  normalize_external_scores.py  preflight_nvfp4.py  prepare_data.py  score_smoke_rubric.py  validate_hf_roundtrip.py  validate_nvfp4_acceptance.py  validate_rwkv_lm_kernel.py  validate_vllm_service.py  write_tiny_pilot_inputs.py
src/train/any2rwkv/tests/: test_artifacts_quantize.py  test_contract.py  test_data.py  test_evaluator_runner.py  test_external_scores.py  test_fetch_fineweb_edu.py  test_hybrid.py  test_kernel_adapter.py  test_mapping_distill.py  test_migration_init.py  test_modeling.py  test_nvfp4_acceptance.py  test_oracle.py  test_p0_runner.py  test_quality_command_plan.py  test_recurrent.py  test_scale_streaming.py  test_target.py  test_teacher.py  test_vllm_service_contract.py
(+207 files in other folders)
