[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicopter"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
helicopter = "helicopter_cli.__main__:main"

[dependency-groups]
common = [
  "pytest",
  "pytest-asyncio==1.4.0",
  "ruff>=0.12.0",
  "socksio>=1.0.0",
  "torch==2.11.0",
]

rwkv-lm = [
  { include-group = "common" },
  "deepspeed",
  "pytorch-lightning==1.9.5",
]

vllm = [
  { include-group = "common" },
  "aiohttp>=3.13.3",
  "blake3",
  "cachetools",
  "cbor2",
  "cloudpickle",
  "cmake>=3.26.1",
  "fastapi[standard]>=0.133.0,<0.137.0",
  "filelock>=3.16.1",
  "jinja2",
  "msgspec",
  "model-hosting-container-standards>=0.1.14,<1.0.0",
  "ninja",
  "numpy>=2.0.0",
  "openai>=2.0.0",
  "openai-harmony>=0.0.3",
  "packaging>=24.2",
  "partial-json-parser",
  "pillow",
  "prometheus-client>=0.18.0",
  "prometheus-fastapi-instrumentator>=8.0.0",
  "protobuf>=5.29.6,!=6.30.*,!=6.31.*,!=6.32.*,!=6.33.0.*,!=6.33.1.*,!=6.33.2.*,!=6.33.3.*,!=6.33.4.*",
  "pybase64",
  "psutil",
  "py-cpuinfo",
  "pydantic>=2.12.0",
  "pyyaml",
  "python-json-logger",
  "pyzmq>=25.0.0",
  "regex",
  "requests>=2.26.0",
  "safetensors>=0.6.2",
  "setproctitle",
  "setuptools>=77.0.3,<81.0.0",
  "setuptools-scm>=8.0",
  "starlette>=1.0.1",
  "tokenizers>=0.21.1",
  "tblib==3.1.0",
  "tqdm",
  "transformers>=5.5.3,!=5.6.0",
  "typing-extensions>=4.10",
  "watchfiles",
  "wheel",
]

verl = [
  { include-group = "rwkv-lm" },
  "accelerate",
  "codetiming",
  "datasets",
  "dill",
  "fastapi",
  "hydra-core",
  "latex2sympy2-extended",
  "math-verify",
  "nvtx",
  "nvidia-ml-py>=12.560.30",
  "numpy>=2.0.0",
  "packaging>=20.0",
  "pandas",
  "peft",
  "pyarrow>=19.0.0",
  "pybind11",
  "pylatexenc",
  "ray[default]>=2.41.0",
  "tensorboard",
  "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
  "torchdata",
  "transferqueue==0.1.8",
  "transformers!=5.6.0",
  "uvicorn",
  "wandb",
  "zstandard",
]

full = [
  "liger-kernel",
  "pre-commit",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src/cli"]
include = ["helicopter_cli*"]
