[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicopter"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
helicopter = "helicopter_cli.__main__:main"

[dependency-groups]
vllm-rwkv = [
  "aiohttp>=3.13.3",
  "blake3",
  "cachetools",
  "cbor2",
  "cloudpickle",
  "cmake>=3.26.1",
  "fastapi[standard]>=0.133.0,<0.137.0",
  "filelock>=3.16.1",
  "jinja2>=3.1.6",
  "msgspec",
  "ninja",
  "numpy",
  "openai>=2.0.0",
  "openai-harmony>=0.0.3",
  "packaging>=24.2",
  "partial-json-parser",
  "pillow",
  "prometheus_client>=0.18.0",
  "prometheus-fastapi-instrumentator>=8.0.0",
  "protobuf>=5.29.6,!=6.30.*,!=6.31.*,!=6.32.*,!=6.33.0.*,!=6.33.1.*,!=6.33.2.*,!=6.33.3.*,!=6.33.4.*",
  "pybase64",
  "psutil",
  "py-cpuinfo",
  "pydantic>=2.12.0",
  "pyyaml",
  "python-json-logger",
  "pyzmq>=25.0.0",
  "regex",
  "requests>=2.26.0",
  "safetensors>=0.6.2",
  "setproctitle",
  "setuptools>=77.0.3,<81.0.0",
  "setuptools-scm>=8.0",
  "starlette>=1.0.1",
  "tokenizers>=0.21.1",
  "torch==2.11.0",
  "tqdm",
  "transformers>=5.5.3",
  "typing_extensions>=4.10",
  "watchfiles",
  "wheel",
]

verl-rwkv = [
  "accelerate",
  "codetiming",
  "datasets",
  "dill",
  "fastapi",
  "hydra-core",
  "latex2sympy2-extended",
  "math-verify",
  "numpy>=2.0.0",
  "nvtx==0.2.15",
  "packaging>=20.0",
  "pandas",
  "peft",
  "pyarrow>=19.0.0",
  "pybind11",
  "pylatexenc",
  "ray[default]>=2.41.0",
  "tensorboard",
  "tensordict>=0.8.0,<=0.10.0,!=0.9.0",
  "torch==2.11.0",
  "torchdata",
  "transferqueue==0.1.8",
  "transformers>=5.5.3,!=5.6.0",
  "uvicorn",
  "wandb",
  "zstandard",
]

rwkv-lm = [
  "deepspeed",
  "numpy>=2.0.0",
  "pytorch-lightning==1.9.5",
  "torch==2.11.0",
]

rwkv-hf = [
  "causal-conv1d==1.6.2.post1",
  "datasets",
  "flash-linear-attention==0.5.1",
  "huggingface-hub",
  "ninja",
  "numpy>=2.0.0",
  "safetensors>=0.6.2",
  "scipy",
  "setuptools>=77.0.3,<81.0.0",
  "tokenizers>=0.21.1",
  "torch==2.11.0",
  "tqdm",
  "transformers>=5.5.3,<5.14,!=5.6.0",
  "wandb>=0.28,<0.29",
  "wheel",
]

lighteval = [
  "lighteval==0.13.0",
  "torch==2.11.0",
  "transformers>=5.5.3,<5.14,!=5.6.0",
]

dev = [
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "ruff>=0.14,<1",
]

verl-liger = [
  "liger-kernel",
]

[tool.uv]
package = true
default-groups = []
conflicts = [
  [
    { group = "verl-rwkv" },
    { group = "lighteval" },
  ],
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.extra-build-dependencies]
causal-conv1d = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
causal-conv1d = { CAUSAL_CONV1D_FORCE_BUILD = "TRUE" }

[tool.pytest.ini_options]
testpaths = ["tests", "src/train/any2rwkv/tests"]
norecursedirs = [".git", ".venv", "src/infer/vllm-rwkv", "src/train/rwkv-hf", "src/train/rwkv-lm", "src/train/verl-rwkv"]

[tool.setuptools.packages.find]
where = ["src/cli"]
include = ["helicopter_cli*"]
