[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicopter-scoreboard-server"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.22.1,<0.23.0",
  "asyncpg>=0.31.0,<0.32.0",
  "fastapi>=0.133.0,<0.137.0",
  "uvicorn[standard]>=0.38.0,<0.39.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=9.0.2,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "ruff>=0.14.0,<0.16.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scoreboard_server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
