[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicopter-lighteval"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.28.1,<0.29.0",
  "lighteval @ git+https://github.com/huggingface/lighteval.git@64f4f5ae173626509fad6e477ca4ee56ebb26129",
  "openai>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10.0.0",
  "ruff>=0.14.0,<0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["helicopter_lighteval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
